Fix modal text overlapping button Resolves #2 Resolves #11

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -70,6 +70,8 @@
     padding: 2.5rem;
     background-color: #FFE8B9;
     border: none;
+    display: flex;
+    flex-flow: column;
 }
 
 @media print, screen and (min-width: 40em) {
@@ -89,6 +91,14 @@
     line-height: 1em;
     text-transform: none;
     color: #3d3d3d;
+    flex: 0 1 auto;
+}
+
+.reveal p {
+    overflow-y: scroll;
+    flex: 1 1 auto;
+    margin-bottom: 3rem;
+    /* padding-right: 0.5rem; */
 }
 
 /* .close-button {
@@ -103,6 +113,7 @@
     text-align: center;
     bottom: 2rem;
     transition: background-color, border ease-in-out 0.5s;
+    flex: 0 1 auto;
 }
 
 .action-link:hover {
